experimental/parser/testdata/parser/type/generic.proto.stderr.txt
error: unexpected tokens after type
  --> testdata/parser/type/generic.proto:37:13
   | 
37 |     set<Foo bar> x13 = 13;
   |             ^^^ 

encountered 1 error
